--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,9 @@
     "react": "^16.4.1",
     "react-collapsible": "^2.2.0",
     "react-dom": "^16.4.1",
+    "react-redux": "^5.0.7",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4"
   },
   "scripts": {
