--- a/server/package.json
+++ b/server/package.json
@@ -1,18 +1,31 @@
 {
   "name": "react-backend",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "set PORT=3001 && nodemon bin/www"
+    "start": "set PORT=3001 && nodemon bin/www --exec babel-node --presets es2015,stage-2"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.3",
+    "cuid": "^1.3.8",
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "mongodb": "^3.1.1",
+    "mongoose": "^5.2.5",
     "morgan": "~1.9.0",
-    "nodemon": "^1.18.3"
+    "nodemon": "^1.18.3",
+    "prop-types": "^15.6.2",
+    "sanitize-html": "^1.18.2"
+  },
+  "engines": {
+    "node": ">=6"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1"
   }
 }
