--- a/client/package.json
+++ b/client/package.json
@@ -7,11 +7,12 @@
     "react": "^16.4.1",
     "react-collapsible": "^2.2.0",
     "react-dom": "^16.4.1",
+    "react-google-login": "^3.2.1",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-google-login": "^3.2.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "redux": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
