--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "react-collapsible": "^2.2.0",
     "react-dom": "^16.4.1",
     "react-google-login": "^3.2.1",
+    "react-qr-reader": "^2.1.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
