--- a/server/package.json
+++ b/server/package.json
@@ -6,19 +6,19 @@
     "start": "set PORT=3001 && nodemon bin/www --exec babel-node --presets es2015,stage-2"
   },
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "cookie-parser": "~1.4.3",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "cuid": "^1.3.8",
     "debug": "~2.6.9",
-    "express": "~4.16.0",
+    "express": "^4.16.4",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
-    "mongodb": "^3.1.1",
-    "mongoose": "^5.2.5",
-    "morgan": "~1.9.0",
-    "nodemon": "^1.18.3",
-    "prop-types": "^15.6.2",
-    "sanitize-html": "^1.18.2"
+    "mongodb": "^3.6.6",
+    "mongoose": "^5.12.7",
+    "morgan": "^1.9.1",
+    "nodemon": "^1.19.4",
+    "prop-types": "^15.7.2",
+    "sanitize-html": "^2.3.3"
   },
   "engines": {
     "node": ">=6"
